--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "formik": "^1.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "recharts": "^1.7.1"
+    "recharts": "^1.7.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
