--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "recharts": "^1.7.1",
     "redux": "^4.0.4",
     "yup": "^0.27.0"
